# snowcast_package

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/snowcast/data_wrangling/: __init__.py  pull_MODIS_list.py
src/snowcast_Malachyiii.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
