[metadata]
name = snowcast-Malachyiii
version = 0.0.1
author = Malachy J. Moran III
author_email = malachy.j.moran@gmail.com
description = A package for pulling down satellite imagery for snow forcasting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Malachyiii/snowcast_package
project_urls =
    Bug Tracker = https://github.com/Malachyiii/snowcast_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	pandas	
	numpy==1.21
	libgdal-dev
	gdal-bin
	python-gdal
	python3-gdal
	python3-rtree
	git+https://github.com/geopandas/geopandas.git
	tornado>=6.0
	dask[complete]
	pystac_client
	planetary_computer
	rasterio
	xarray-spatial
	matplotlib
	datetime
	pystac_client
	planetary_computer
	xarray
	datashader
	rasterio
	geotiff
	geopy
	shapely
	imagecodecs
	sklearn
	requests 
	earthengine-api>=0.12
	httplib2==0.15.0
	rioxarray
	shutil
	time
	os
	re
	signal
	importlib
	platform

[options.packages.find]
where = src
