[metadata]
name = snowcast-Malachyiii
version = 1.0.0
author = Malachy J. Moran III
author_email = malachy.j.moran@gmail.com
description = A package for pulling down satellite imagery for snow forcasting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Malachyiii/snowcast_package
project_urls =
    Bug Tracker = https://github.com/Malachyiii/snowcast_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	pandas	
	numpy==1.21.0
	GDAL;platform_system!='Windows'
	Rtree
	geopandas
	tornado>=6.0
	dask[complete]
	pystac-client
	planetary_computer
	rasterio
	xarray-spatial
	matplotlib
	xarray
	datashader
	geotiff
	geopy
	shapely
	imagecodecs
	sklearn
	requests 
	earthengine-api
	httplib2==0.15.0
	rioxarray
	importlib

[options.packages.find]
where = src
